# upfall-rs

./: .gitignore  CREDITS.md  Cargo.toml  README.md
.github/workflows/: rust.yml
levels/: NOTICE.txt
res/: shader.frag
src/: level.rs  main.rs  palette.rs  player.rs  scenes.rs  tilemap.rs  util.rs  world.rs
src/scenes/: editor.rs  game.rs  mod.rs  start.rs
