[package]
name = "upfall-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
ndarray = "0.15.6"
serde = { version = "1.0.196", features = ["derive"] }
tetra = { version = "0.8.0", features = ["serde_support"] }
